service page  second image remove

--- a/service.html
+++ b/service.html
@@ -434,12 +434,15 @@
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
                                 <h2 class="heading">Service Page</h2>
+                                <p class="banner-width" style="max-width: 750px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tincidunt sem ut
+                                    efficitur finibus. Nulla bibendum, mauris a iaculis tincidunt, dolor ligula varius
+                                    nibh, ut lacinia sem ligula id velit. Nulla scelerisque, magna mollis aliquam
+                                    aliquet, lacus risus interdum orci, lobortis maximus neque orci sit amet mauris.</p>
                             </div>
-                            <div class="breadcrumbarea__inner">
-                                <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li>//</li>
-                                    <li> Service</li>
+                            <div class="banner-button">
+                                <ul class="common-button">
+                                    <a class="default__button" href="#">GET FREE QUATE</a>
+                                    <a class="default__button" href="#">GET FREE QUATE</a>
                                 </ul>
                             </div>
                         </div>
