--- a/GameDevelop.html
+++ b/GameDevelop.html
@@ -430,6 +430,12 @@
 
         <!-- breadcrumbarea__start -->
         <div class="breadcrumbarea">
+            <div class="breadcrumbarea__overlay">
+                <video class="breadcrumbarea__video__element" autoplay muted loop>
+                    <source src="assets/img/service/WhatsApp Video 2024-11-23 at 1.33.20 AM.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12">
@@ -437,20 +443,23 @@
                             <div class="breadcrumbarea__title">
                                 <h2 class="heading">Service Details</h2>
                             </div>
-                            <div class="breadcrumbarea__inner">
-                                <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li>// </li>
-                                    <li> Game Developement </li>
+                            <div class="breadcrumbarea___para">
+                                <p class="banner-width" style="max-width: 750px;">Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit. Nullam tincidunt sem ut
+                                    efficitur finibus. Nulla bibendum, mauris a iaculis tincidunt, dolor ligula varius
+                                    nibh, ut lacinia sem ligula id velit. Nulla scelerisque, magna mollis aliquam
+                                    aliquet, lacus risus interdum orci, lobortis maximus neque orci sit amet mauris.</p>
+                            </div>
+                            <div class="banner-button">
+                                <ul class="common-button">
+                                    <a class="default__button" href="#">GET FREE QUATE</a>
+                                    <a class="default__button" href="#">GET FREE QUATE</a>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-
-
         </div>
         <!-- breadcrumbarea__end -->
         <!-- service__details__start -->
