--- a/service.html
+++ b/service.html
@@ -429,11 +429,11 @@
         <!-- breadcrumbarea__start -->
         <div class="breadcrumbarea">
             <div class="breadcrumbarea__overlay">
-            <video class="breadcrumbarea__video__element" autoplay muted loop>
-                <source src="assets/img/service/WhatsApp Video 2024-11-23 at 1.33.20 AM.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
+                <video class="breadcrumbarea__video__element" autoplay muted loop>
+                    <source src="assets/img/service/WhatsApp Video 2024-11-23 at 1.33.20 AM.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12">
@@ -442,7 +442,8 @@
                                 <h2 class="heading">Service Page</h2>
                             </div>
                             <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tincidunt sem ut
+                                <p class="banner-width" style="max-width: 750px;">Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit. Nullam tincidunt sem ut
                                     efficitur finibus. Nulla bibendum, mauris a iaculis tincidunt, dolor ligula varius
                                     nibh, ut lacinia sem ligula id velit. Nulla scelerisque, magna mollis aliquam
                                     aliquet, lacus risus interdum orci, lobortis maximus neque orci sit amet mauris.</p>
