--- a/about.html
+++ b/about.html
@@ -929,7 +929,7 @@
         </div>
         <!--whattappicon-->
         <div class="footer position-relative sp_top_250 pink__bg__color" id="footer__area"
-            style="background-image: url(img/footer/footer_1.png);">
+            style="background-image: url(assets/img/footer/footer_1.png);">
 
             <div class="bastun__brand__badge bastun__brand__badge__footer">
                 <div class="bastun__brand__badge__inner position-relative">
