--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -430,46 +430,41 @@
 
         <!-- herobanner__section__start -->
         <div class="herobanner d-flex align-items-center herobanner__with__transparent__header">
+                   <!-- breadcrumbarea__start -->
+        <div class="breadcrumbarea">
+            <div class="breadcrumbarea__overlay">
+                <video class="breadcrumbarea__video__element" autoplay muted loop>
+                    <source src="assets/img/service/WhatsApp Video 2024-11-23 at 1.33.20 AM.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
             <div class="container">
-                <div class="herobanner__wrapper">
-
-                    <div class="herobanner__single">
-                        <div class="row align-items-center">
-                            <div class="col-xxl-5 col-xl-6 col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"
-                                data-aos-duration="1500">
-                                <div class="herobanner__content__wrapper">
-                                    <div class="herobanner__small__text">
-                                        <span>SOFTWARE AGENCY</span>
-                                    </div>
-                                    <div class="herobanner__title herobanner__title--2">
-                                        <h1>Web Development Services </h1>
-                                    </div>
-                                    <div class="herobanner__text herobanner__text--2">
-                                        <p>Digital Minds On is a professional web development company focused on
-                                            delivering high-quality, responsive websites. We specialize in creating
-                                            custom web solutions that are visually appealing, user-friendly, and
-                                            optimized for performance. Our goal is to help businesses enhance their
-                                            online presence and engage their audience with cutting-edge design and
-                                            functionality.
-                                        </p>
-                                    </div>
-                                    <div class="herobanner__button">
-                                        <a class="default__button" href="#">GET A FREE QUATE</a>
-                                    </div>
-                                </div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <div class="breadcrumbarea__content__wraper">
+                            <div class="breadcrumbarea__title">
+                                <h2 class="heading">Webdevelopment Services</h2>
                             </div>
-                            <div class="col-xxl-7 col-xl-6 col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"
-                                data-aos-duration="2000">
-                                <div class="herobanner__img sp_top_90" data-tilt>
-                                    <img class="img-fluid" src="assets/img/herobaner/herobanner__6.png" alt="">
-                                </div>
+                            <div class="breadcrumbarea___para">
+                                <p class="banner-width" style="max-width: 750px;">Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit. Nullam tincidunt sem ut
+                                    efficitur finibus. Nulla bibendum, mauris a iaculis tincidunt, dolor ligula varius
+                                    nibh, ut lacinia sem ligula id velit. Nulla scelerisque, magna mollis aliquam
+                                    aliquet, lacus risus interdum orci, lobortis maximus neque orci sit amet mauris.</p>
+                            </div>
+                            <div class="banner-button">
+                                <ul class="common-button">
+                                    <a class="default__button" href="#">GET FREE QUATE</a>
+                                    <a class="default__button" href="#">GET FREE QUATE</a>
+                                </ul>
                             </div>
                         </div>
                     </div>
-
                 </div>
-
             </div>
+        </div>
+        <!-- breadcrumbarea__end -->
+       
 
         </div>
         <!-- herobanner__section__end -->
