--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                         <div class="swiper-wrapper">
 
                             <div class="herobanner__single swiper-slide position-relative">
-                                <div class="row align-items-center height__950">
+                                <div class="row height__950">
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"
                                         data-aos-duration="1500">
                                         <div class="herobanner__content__wrapper">
@@ -386,7 +386,7 @@
                             </div>
 
                             <div class="herobanner__single swiper-slide position-relative">
-                                <div class="row align-items-center height__950">
+                                <div class="row height__950">
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"
                                         data-aos-duration="1500">
                                         <div class="herobanner__content__wrapper">
@@ -411,7 +411,7 @@
                             </div>
 
                             <div class="herobanner__single swiper-slide position-relative">
-                                <div class="row align-items-center height__950">
+                                <div class="row height__950">
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"
                                         data-aos-duration="1500">
                                         <div class="herobanner__content__wrapper">
