--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 ">
                                         <div class="herobanner__img herobanner__img--position">
-                                            <img src="assets/img/herobaner/herobanner__front__3.png" alt="">
+                                            <img src="assets/img/team/slider/nadeem.png" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -1300,29 +1300,20 @@
         <!-- testimonial__section__end -->
 
         <!-- brand__section__start -->
-        <div class="brand sp_40" id="brand__area">
+        <div class="brand-color sp_40" id="brand__area">
             <div class="container">
                 <div class="brand__inner">
                     <div class="brand__single">
-                        <img src="assets/img/brand/brand__1.png" alt="">
+                        <img src="assets/img/logo/logo-path-finder.webp" alt="">
                     </div>
                     <div class="brand__single">
-                        <img src="assets/img/brand/brand__2.png" alt="">
+                        <img src="assets/img/logo/gym.svg" alt="">
                     </div>
                     <div class="brand__single">
-                        <img src="assets/img/brand/brand__1.png" alt="">
+                        <img src="assets/img/logo/shortlistme-logo.png" alt="">
                     </div>
                     <div class="brand__single">
-                        <img src="assets/img/brand/brand__2.png" alt="">
-                    </div>
-                    <div class="brand__single">
-                        <img src="assets/img/brand/brand__1.png" alt="">
-                    </div>
-                    <div class="brand__single">
-                        <img src="assets/img/brand/brand__2.png" alt="">
-                    </div>
-                    <div class="brand__single">
-                        <img src="assets/img/brand/brand__1.png" alt="">
+                        <img src="assets/img/logo/logo.e4c246ea.png" alt="">
                     </div>
                 </div>
             </div>
