--- a/wordpress.html
+++ b/wordpress.html
@@ -425,28 +425,37 @@
 
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea" style="background: url(assets/img/about/about__bg__1.jpg);">
+        <div class="breadcrumbarea-video">
+            <div class="breadcrumbarea__overlay">
+                <video class="breadcrumbarea__video__element" autoplay="" muted="" loop="">
+                    <source src="assets/img/service/WhatsApp Video 2024-11-23 at 1.33.20 AM.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
+                    <div class="col-xl-12">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">Service Details</h2>
+                                <h2 class="heading">Webdevelopment Services</h2>
                             </div>
-                            <div class="breadcrumbarea__inner">
-                                <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li>// </li>
-                                    <li> About us </li>
+                            <div class="breadcrumbarea___para">
+                                <p class="banner-width" style="max-width: 750px;">Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit. Nullam tincidunt sem ut
+                                    efficitur finibus. Nulla bibendum, mauris a iaculis tincidunt, dolor ligula varius
+                                    nibh, ut lacinia sem ligula id velit. Nulla scelerisque, magna mollis aliquam
+                                    aliquet, lacus risus interdum orci, lobortis maximus neque orci sit amet mauris.</p>
+                            </div>
+                            <div class="banner-button">
+                                <ul class="common-button">
+                                    <a class="default__button" href="#">GET FREE QUATE</a>
+                                    <a class="default__button" href="#">GET FREE QUATE</a>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-
-
         </div>
         <!-- breadcrumbarea__end -->
 
