email action all service page ma update

--- a/itexpert.html
+++ b/itexpert.html
@@ -629,7 +629,7 @@
                         <!-- from -->
                         <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
                             <form id="contact-form" class="contact-form"
-                                action="https://html.themewin.com/bastun-preview/bastun/mail.php" method="post">
+                            action="email.php">
                                 <div class="row">
                                     <div class="col-xl-12">
                                         <div class="contact__input">
@@ -640,22 +640,14 @@
                                     <div class="col-xl-12">
                                         <div class="contact__input">
                                             <input class="contact__common__input" type="text" name="con_email"
-                                                id="con_email" placeholder="Email">
+                                                id="con_email" placeholder="Email" required>
                                         </div>
                                     </div>
                                     <div class="col-xl-12">
                                         <div class="contact__input">
                                             <input class="contact__common__input" type="text" name="phone"
-                                                placeholder="Phone">
+                                                placeholder="Phone" required>
                                         </div>
-                                    </div>
-                                    <div class="col-xl-12">
-                                        <select class="contact__common__input" name="subject" id="subject">
-                                            <option value="volvo">Subject:</option>
-                                            <option value="saab">Saab</option>
-                                            <option value="mercedes">Mercedes</option>
-                                            <option value="audi">Audi</option>
-                                        </select>
                                     </div>
                                     <div class="col-xl-12">
                                         <textarea class="contact__common__input" name="con_message" id="con_message"
