--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -582,7 +582,7 @@
                         <!-- form -->
                         <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
                             <form id="contact-form" class="contact-form"
-                            action="email.php" method="post">
+                            action="email.php">
                                 <div class="row">
                                     <div class="col-xl-12">
                                         <div class="contact__input">
