--- a/seo.html
+++ b/seo.html
@@ -578,8 +578,7 @@
                         </div>
                         <!-- from -->
                         <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
-                            <form id="contact-form" class="contact-form"
-                                action="https://html.themewin.com/bastun-preview/bastun/mail.php" method="post">
+                            <form id="contact-form" class="contact-form" action="email.php">
                                 <div class="row">
                                     <div class="col-xl-12">
                                         <div class="contact__input">
@@ -590,22 +589,14 @@
                                     <div class="col-xl-12">
                                         <div class="contact__input">
                                             <input class="contact__common__input" type="text" name="con_email"
-                                                id="con_email" placeholder="Email">
+                                                id="con_email" placeholder="Email" required>
                                         </div>
                                     </div>
                                     <div class="col-xl-12">
                                         <div class="contact__input">
                                             <input class="contact__common__input" type="text" name="phone"
-                                                placeholder="Phone">
+                                                placeholder="Phone" required>
                                         </div>
-                                    </div>
-                                    <div class="col-xl-12">
-                                        <select class="contact__common__input" name="subject" id="subject">
-                                            <option value="volvo">Subject:</option>
-                                            <option value="saab">Saab</option>
-                                            <option value="mercedes">Mercedes</option>
-                                            <option value="audi">Audi</option>
-                                        </select>
                                     </div>
                                     <div class="col-xl-12">
                                         <textarea class="contact__common__input" name="con_message" id="con_message"
@@ -679,6 +670,24 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                     incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
                                     vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
+                                    vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
+                                    vehicula. Arcu vitae elementum curabitur vitae nunc.Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                    magna aliqua. Odio facilisis mauris sit amet massa vitae tortor condimentum. Etiam
+                                    sit amet nisl purus in mollis nunc sed. Quam vulputate dignissim suspendisse in est
+                                    ante in. Amet commodo nulla facilisi nullam vehicula. Arcu vitae elementum curabitur
+                                    vitae nunc.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet
+                                    massa vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
+                                    vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
+                                    vehicula. Arcu vitae elementum curabitur vitae nunc.Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                    magna aliqua. Odio facilisis mauris sit amet massa vitae tortor condimentum. Etiam
+                                    sit amet nisl purus in mollis nunc sed. Quam vulputate dignissim suspendisse in est
+                                    ante in. Amet commodo nulla facilisi nullam vehicula. Arcu vitae elementum curabitur
+                                    vitae nunc.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet
+                                    massa vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
                                     vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
                                     vehicula. Arcu vitae elementum curabitur vitae nunc.</p>
 
