--- a/uidesign.html
+++ b/uidesign.html
@@ -697,7 +697,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/UIUX/Interaction Design.png" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -716,7 +716,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/UIUX/Prototyping.png" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -734,7 +734,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/UIUX/Usability Testing.png" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -753,7 +753,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/UIUX/User Research.png" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -773,7 +773,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/UIUX/Visual Design.png" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -791,7 +791,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/UIUX/Wireframing.png" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
