--- a/index.html
+++ b/index.html
@@ -1300,17 +1300,17 @@
         <!-- testimonial__section__end -->
 
         <!-- brand__section__start -->
-        <div class="brand-color sp_40" id="brand__area">
+        <div class="brand sp_40" id="brand__area">
             <div class="container">
                 <div class="brand__inner">
                     <div class="brand__single">
-                        <img src="assets/img/logo/logo-path-finder.webp" alt="">
+                        <img src="assets/img/logo/logo/icon.svg" alt="">
                     </div>
                     <div class="brand__single">
-                        <img src="assets/img/logo/gym.svg" alt="">
+                        <img src="assets/img/logo/logo/logo.e4c246ea.svg" alt="">
                     </div>
                     <div class="brand__single">
-                        <img src="assets/img/logo/shortlistme-logo.png" alt="">
+                        <img src="assets/img/logo/logo/Untitled-1.svg" alt="">
                     </div>
                     <div class="brand__single">
                         <img src="assets/img/logo/logo.e4c246ea.png" alt="">
@@ -1459,7 +1459,7 @@
                     <a href="index.html">
 
                         <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                        <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
+                        <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
                     </a>
                 </div>
             </div>
