--- a/software.html
+++ b/software.html
@@ -951,7 +951,7 @@
                         <a href="index.html">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                            <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png"
+                            <img class="bbb__icon" src="assets/img/logo/logo/icon.svg"
                                 alt="Footer icon badge">
                         </a>
                     </div>
