--- a/itexpert.html
+++ b/itexpert.html
@@ -1118,7 +1118,7 @@
                     <a href="index.html">
 
                         <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                        <img class="bbb__icon" src="assets/img/logo/icon.svg" alt="Footer icon badge">
+                        <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
                     </a>
                 </div>
             </div>
