--- a/contact.html
+++ b/contact.html
@@ -495,16 +495,8 @@
                                         </div>
                                     </div>
                                     <div class="col-xl-12">
-                                        <!-- <select class="contact__common__input" name="subject" id="subject">
-                                            <option value="volvo">Subject:</option>
-                                            <option value="saab">Saab</option>
-                                            <option value="mercedes">Mercedes</option>
-                                            <option value="audi">Audi</option>
-                                        </select> -->
-                                    </div>
-                                    <div class="col-xl-12">
-                                        <textarea class="contact__common__input" name="con_message" id="con_message"
-                                            cols="30" rows="10">write a message....</textarea>
+                                        <textarea class="contact__common__input" name="con_message"   placeholder="write a message...." id="con_message"
+                                            cols="30" rows="10"></textarea>
                                     </div>
                                     <div class="col-xl-12">
                                         <div class="contact__button">
