--- a/digtalmarketing.html
+++ b/digtalmarketing.html
@@ -597,7 +597,7 @@
                                     </div>
                                     <div class="col-xl-12">
                                         <textarea class="contact__common__input" name="con_message" id="con_message"
-                                            cols="30" rows="10">write a message....</textarea>
+                                            cols="30" rows="10" placeholder="write a message...."></textarea>
                                     </div>
                                     <div class="col-xl-12">
                                         <div class="contact__button">
