ui page content update

--- a/uidesign.html
+++ b/uidesign.html
@@ -576,8 +576,7 @@
                         </div>
                         <!-- from -->
                         <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
-                            <form id="contact-form" class="contact-form"
-                            action="email.php">
+                            <form id="contact-form" class="contact-form" action="email.php">
                                 <div class="row">
                                     <div class="col-xl-12">
                                         <div class="contact__input">
@@ -697,15 +696,14 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/UIUX/Interaction Design.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/UIUX/Interaction Design.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Custom Web Development</h5>
-                                        <span class="card-text">Digital Minds specializes in custom
-                                            WordPress
-                                            web development, enhancing your brand and creating a web
-                                            presence that aligns perfectly with your business goals.
+                                        <h5 class="card-title">Interaction Design (IxD)</h5>
+                                        <span class="card-text">Defining how users interact with elements (e.g.,
+                                            buttons, forms) and ensuring smooth, intuitive actions within the interface.
                                         </span>
                                     </div>
                                 </div>
@@ -716,15 +714,14 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/UIUX/Prototyping.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/UIUX/Prototyping.png" class="img-fluid rounded-start"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Frontend/Backend Solutions</h5>
-                                        <span class="card-text">Our knowledgeable team excels in
-                                            creating impactful frontend designs and dynamic,
-                                            efficient backend solutions that ensure scalability and
-                                            robust performance.</span>
+                                        <h5 class="card-title">Prototyping</h5>
+                                        <span class="card-text">Building interactive models of the design to simulate
+                                            user interaction and test flow before development.</span>
                                     </div>
                                 </div>
                             </div>
@@ -734,15 +731,14 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/UIUX/Usability Testing.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/UIUX/Usability Testing.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">CMS Development</h5>
-                                        <span class="card-text">By adopting web content management
-                                            systems such as WordPress, Joomla, Drupal, and others,
-                                            website content can be updated by persons without any
-                                            technical knowledge of website design.
+                                        <h5 class="card-title">Usability Testing</h5>
+                                        <span class="card-text">Testing the product with real users to identify any
+                                            issues, improve ease of use, and enhance the overall user experience.
                                         </span>
                                     </div>
                                 </div>
@@ -753,16 +749,15 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/UIUX/User Research.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/UIUX/User Research.png" class="img-fluid rounded-start"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">E-Commerce Development
+                                        <h5 class="card-title"> User Research
                                         </h5>
-                                        <span class="card-text">Make your visitors into customers with
-                                            our comprehensive e-commerce features, including payment
-                                            PSD templates, stock tracking, and detailed reporting
-                                            tools.
+                                        <span class="card-text">Understanding user needs, behaviors, and pain points
+                                            through surveys, interviews, and testing to inform design decisions.
                                         </span>
                                     </div>
                                 </div>
@@ -773,14 +768,15 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/UIUX/Visual Design.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/UIUX/Visual Design.png" class="img-fluid rounded-start"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Web Application Development</h5>
-                                        <span class="card-text">Whether you are a small business
-                                            starting or a large enterprise, we create reliable and
-                                            robust web applications for your needs.
+                                        <h5 class="card-title">Visual Design</h5>
+                                        <span class="card-text">Crafting the aesthetic aspects of the interface,
+                                            including color schemes, typography, icons, and imagery for a visually
+                                            appealing experience.
                                         </span>
                                     </div>
                                 </div>
@@ -791,14 +787,14 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/UIUX/Wireframing.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/UIUX/Wireframing.png" class="img-fluid rounded-start"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">API Integration </h5>
-                                        <span class="card-text">Automate and integrate relevant
-                                            business applications and CRMs for your website and fast
-                                            payment solutions.
+                                        <h5 class="card-title">Wireframing</h5>
+                                        <span class="card-text">Creating basic blueprints of the user interface layout,
+                                            showing structure, content, and functionality without detailed design.
                                         </span>
                                     </div>
                                 </div>
