--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@
                                         <a href="index.html">
                                             <img class="bbb__animate" src="assets/img/project/project__1.png"
                                                 alt="Footer badge">
-                                            <img class="bbb__icon" src="assets/img/project/project__1__icon.png"
+                                            <img class="bbb__icon" src="assets/img/logo/logo/icon.svg"
                                                 alt="Footer icon badge">
                                         </a>
                                     </div>
