--- a/software.html
+++ b/software.html
@@ -692,15 +692,14 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/Software Development/CodingDevelopment.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Custom Web Development</h5>
-                                        <span class="card-text">Digital Minds specializes in custom
-                                            WordPress
-                                            web development, enhancing your brand and creating a web
-                                            presence that aligns perfectly with your business goals.
+                                        <h5 class="card-title">Coding/Development</h5>
+                                        <span class="card-text">Writing the actual code using programming languages
+                                            (e.g., Java, Python, C++) to build the software based on the design.
                                         </span>
                                     </div>
                                 </div>
@@ -711,15 +710,14 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/Software Development/Deployment.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Frontend/Backend Solutions</h5>
-                                        <span class="card-text">Our knowledgeable team excels in
-                                            creating impactful frontend designs and dynamic,
-                                            efficient backend solutions that ensure scalability and
-                                            robust performance.</span>
+                                        <h5 class="card-title">Deployment</h5>
+                                        <span class="card-text">Launching the software to a production environment where
+                                            end users can access and use it.</span>
                                     </div>
                                 </div>
                             </div>
@@ -729,15 +727,15 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/Software Development/Maintenance & Updates.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">CMS Development</h5>
-                                        <span class="card-text">By adopting web content management
-                                            systems such as WordPress, Joomla, Drupal, and others,
-                                            website content can be updated by persons without any
-                                            technical knowledge of website design.
+                                        <h5 class="card-title">Maintenance & Updates</h5>
+                                        <span class="card-text">Providing ongoing support, bug fixes, and adding new
+                                            features after the software has been deployed to ensure continued
+                                            performance.
                                         </span>
                                     </div>
                                 </div>
@@ -748,16 +746,15 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/Software Development/Requirements Gathering.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">E-Commerce Development
+                                        <h5 class="card-title">Requirements Gathering
                                         </h5>
-                                        <span class="card-text">Make your visitors into customers with
-                                            our comprehensive e-commerce features, including payment
-                                            PSD templates, stock tracking, and detailed reporting
-                                            tools.
+                                        <span class="card-text">Understanding and documenting the needs and expectations
+                                            of the users or clients to define the software's functionality.
                                         </span>
                                     </div>
                                 </div>
@@ -768,14 +765,14 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/Software Development/System Design.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Web Application Development</h5>
-                                        <span class="card-text">Whether you are a small business
-                                            starting or a large enterprise, we create reliable and
-                                            robust web applications for your needs.
+                                        <h5 class="card-title">System Design</h5>
+                                        <span class="card-text">Understanding and documenting the needs and expectations
+                                            of the users or clients to define the software's functionality.
                                         </span>
                                     </div>
                                 </div>
@@ -786,78 +783,20 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/Software Development/Testing.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">API Integration </h5>
-                                        <span class="card-text">Automate and integrate relevant
-                                            business applications and CRMs for your website and fast
-                                            payment solutions.
+                                        <h5 class="card-title">Testing</h5>
+                                        <span class="card-text">Ensuring the software works as intended through various
+                                            tests (unit, integration, system testing) to find and fix bugs.
                                         </span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Responsive Design</h5>
-                                        <span class="card-text">The mobile-first approach is practiced
-                                            at Minds On to make the site look and work right on any
-                                            device the client is using.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Website Maintenance</h5>
-                                        <span class="card-text">Another critical factor of success in
-                                            e-business is having a professional website. Keeping
-                                            your site updated and secure, we provide all maintenance
-                                            and support services for your website.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-8 large-card">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">UI/UX Design</h5>
-                                        <span class="card-text">In UI/UX solutions Minds On
-                                            concentrates on making the design aesthetic and
-                                            functional. Our work involves the creation of designs
-                                            that meet the client’s desires concerning their targeted
-                                            customers besides helping them to meet their targets.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
                 <div class="row">
                     <div class="col-md-12">
@@ -951,8 +890,7 @@
                         <a href="index.html">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                            <img class="bbb__icon" src="assets/img/logo/logo/icon.svg"
-                                alt="Footer icon badge">
+                            <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
                         </a>
                     </div>
                 </div>
